--- a/web_ban_cong/src/main/resources/templates/front-end/login.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/login.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Fastkart">
     <meta name="keywords" content="Fastkart">
     <meta name="author" content="Fastkart">
-    <link rel="icon" href="@{}/images/favicon/1.png}" type="image/x-icon">
+    <link rel="icon" th:href="@{/images/favicon/1.png}" type="image/x-icon">
     <title>On-demand last-mile delivery</title>
 
     <!-- Google font -->
