--- a/web_ban_cong/src/main/resources/templates/front-end/login.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/login.html
@@ -318,7 +318,7 @@
                                             </li>
 
                                             <li class="product-box-contain">
-                                                <a href="sign-up.html">Register</a>
+                                                <a href="/user/register">Register</a>
                                             </li>
 
                                             <li class="product-box-contain">
@@ -1227,7 +1227,7 @@
 
                     <div class="sign-up-box">
                         <h4>Don't have an account?</h4>
-                        <a href="sign-up.html">Sign Up</a>
+                        <a href="/user/register">Sign Up</a>
                     </div>
                 </div>
             </div>
