--- a/web_ban_cong/src/main/resources/templates/front-end/otp.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/otp.html
@@ -303,7 +303,7 @@
                                             <ul class="user-box-name">
                                                 <li class="product-box-contain">
                                                     <i></i>
-                                                    <a href="login.html">Log In</a>
+                                                    <a href="/login">Log In</a>
                                                 </li>
 
                                                 <li class="product-box-contain">
@@ -1497,7 +1497,7 @@
             // So sánh với giá trị từ hidden input
             if (combinedValue === optValue) {
                 // Thực hiện các hành động khi giá trị đúng
-                window.location.href = '/index';
+                window.location.href = '/';
             } else {
                 // Thực hiện các hành động khi giá trị không đúng
                 alert('Validation failed!');
