--- a/web_ban_cong/src/main/resources/templates/front-end/sign-up.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/sign-up.html
@@ -163,7 +163,7 @@
                                     <i class="fa-solid fa-bars"></i>
                                 </span>
                             </button>
-                            <a href="index.html" class="web-logo nav-logo">
+                            <a href="/" class="web-logo nav-logo">
                                 <img th:src="@{/images/logo/1.png}" class="img-fluid blur-up lazyload" alt="">
                             </a>
 
@@ -754,7 +754,7 @@
 
                                                 <ul class="dropdown-menu">
                                                     <li>
-                                                        <a class="dropdown-item" href="index.html">Kartshop</a>
+                                                        <a class="dropdown-item" href="/">Kartshop</a>
                                                     </li>
                                                     <li>
                                                         <a class="dropdown-item" href="index-2.html">Sweetshop</a>
@@ -1103,7 +1103,7 @@
     <div class="mobile-menu d-md-none d-block mobile-cart">
         <ul>
             <li class="active">
-                <a href="index.html">
+                <a href="/">
                     <i class="iconly-Home icli"></i>
                     <span>Home</span>
                 </a>
@@ -1150,7 +1150,7 @@
                         <nav>
                             <ol class="breadcrumb mb-0">
                                 <li class="breadcrumb-item">
-                                    <a href="index.html">
+                                    <a href="/">
                                         <i class="fa-solid fa-house"></i>
                                     </a>
                                 </li>
@@ -1259,7 +1259,7 @@
 
                         <div class="sign-up-box">
                             <h4>Already have an account?</h4>
-                            <a href="login.html">Log In</a>
+                            <a href="/login">Log In</a>
                         </div>
                     </div>
                 </div>
