--- a/web_ban_cong/src/main/resources/templates/front-end/shop-left-sidebar.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/shop-left-sidebar.html
@@ -21,7 +21,7 @@
         rel="stylesheet">
 
     <!-- bootstrap css -->
-    <link id="rtl-link" rel="stylesheet" type="text/css" th:href="@{/css/vendors/bootstrap.css}">.css}">
+    <link id="rtl-link" rel="stylesheet" type="text/css" th:href="@{/css/vendors/bootstrap.css}">
 
     <!-- wow css -->
     <link rel="stylesheet" th:href="@{/css/animate.min.css}" />
