--- a/web_ban_cong/src/main/resources/templates/back-end/category.html
+++ b/web_ban_cong/src/main/resources/templates/back-end/category.html
@@ -256,7 +256,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="add-new-category.html">Add New Category</a>
+                                            <a href="add-new-tree.html">Add New Category</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -432,7 +432,7 @@
                                     <div class="title-header option-title">
                                         <h5>All Category</h5>
                                         <form class="d-inline-flex">
-                                            <a href="add-new-category.html"
+                                            <a href="add-new-tree.html"
                                                 class="align-items-center btn btn-theme d-flex">
                                                 <i data-feather="plus-square"></i>Add New
                                             </a>
