--- a/web_ban_cong/src/main/resources/templates/back-end/create-menu.html
+++ b/web_ban_cong/src/main/resources/templates/back-end/create-menu.html
@@ -261,7 +261,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="add-new-category.html">Add New Category</a>
+                                            <a href="add-new-tree.html">Add New Category</a>
                                         </li>
                                     </ul>
                                 </li>
