--- a/web_ban_cong/src/main/resources/templates/back-end/index.html
+++ b/web_ban_cong/src/main/resources/templates/back-end/index.html
@@ -254,6 +254,22 @@
 
                             <li class="sidebar-list">
                                 <a class="linear-icon-link sidebar-link sidebar-title" href="javascript:void(0)">
+                                    <i class="ri-store-3-line"></i>
+                                    <span>Combo</span>
+                                </a>
+                                <ul class="sidebar-submenu">
+                                    <li>
+                                        <a th:href="@{/combo/manager/all}">Combo</a>
+                                    </li>
+
+                                    <li>
+                                        <a th:href="@{/combo/add}">Add New Combo</a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li class="sidebar-list">
+                                <a class="linear-icon-link sidebar-link sidebar-title" href="javascript:void(0)">
                                     <i class="ri-list-check-2"></i>
                                     <span>Tree</span>
                                 </a>
