--- a/web_ban_cong/src/main/resources/templates/back-end/add-new-category.html
+++ b/web_ban_cong/src/main/resources/templates/back-end/add-new-category.html
@@ -449,180 +449,24 @@
 
         <div class="page-body">
 
-            <!-- New Product Add Start -->
-            <form class="container-fluid" method="post" th:action="@{/tree/add}" th:object="${tree}" enctype="multipart/form-data">
-                <div class="row">
-                    <div class="col-12" >
-                        <div class="row">
-                            <div class="col-sm-8 m-auto">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <div class="card-header-2">
-                                            <h5>Thông tin cây</h5>
-                                        </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-header-2">
+                        <h5>Category Information</h5>
+                    </div>
 
-                                        <div class="theme-form theme-form-2 mega-form">
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Tên Cây</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Tên sản phẩm" th:field="*{name}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Màu </label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Màu" th:field="*{flowerColor}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Số lượng </label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="number"
-                                                           placeholder="Số lượng" th:field="*{quantity}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Nội dung </label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Nội dung" th:field="*{title}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Size </label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Size" th:field="*{size}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label
-                                                        class="col-sm-3 col-form-label form-label-title">Category</label>
-                                                <div class="col-sm-9">
-                                                    <select class="js-example-basic-single w-100" name="stateProduct">
-                                                        <option disabled>Category Menu</option>
-                                                        <option th:each="cate : ${category}" th:value="${cate.id}" th:text="${cate.getName()}"></option>
-                                                    </select>
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Mùa ra hoa</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Hình dạng" th:field="*{mostSeason}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Ngày nhập</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="date"
-                                                           placeholder="Ngày sản xuất" th:field="*{arrivalDate}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Đặc tính </label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Đặc tính" th:field="*{dacTinh}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Cách chăm sóc</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Cách bảo quản" th:field="*{howToCare}">
-                                                </div>
-                                            </div>
-
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="form-label-title col-sm-3 mb-0">Mô tả</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Mô tả" th:field="*{description}">
-                                                </div>
-                                            </div>
-
-                                            <div class="row align-items-center">
-                                                <label
-                                                        class="col-sm-3 col-form-label form-label-title">Có thể hoàn trả</label>
-                                                <div class="col-sm-9">
-                                                    <label class="switch">
-                                                        <input type="checkbox" th:checked="*{refund}" ><span
-                                                            class="switch-state"></span>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="card">
-                                    <div class="card-body">
-                                        <div class="card-header-2">
-                                            <h5>Product Images</h5>
-                                        </div>
-
-                                        <div class="theme-form theme-form-2 mega-form">
-                                            <div class="mb-4 row align-items-center">
-                                                <label
-                                                        class="col-sm-3 col-form-label form-label-title">Ảnh đại diện </label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control form-choose" type="file" name="file"
-                                                           id="formFile">
-                                                </div>
-                                            </div>
-
-                                            <div class="row align-items-center">
-                                                <label class="col-sm-3 col-form-label form-label-title">Các ảnh khác</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control form-choose" type="file" name="imageOther"
-                                                           id="formFileMultiple1" multiple>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="card">
-                                    <div class="card-body">
-                                        <div class="card-header-2">
-                                            <h5>Giá sản phẩm</h5>
-                                        </div>
-
-                                        <div class="theme-form theme-form-2 mega-form">
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="col-sm-3 form-label-title">Giá bán</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="number" placeholder="0" th:field="*{price}">
-                                                </div>
-                                            </div>
-                                            <div class="mb-4 row align-items-center">
-                                                <label class="col-sm-3 form-label-title">Giá ảo</label>
-                                                <div class="col-sm-9">
-                                                    <input class="form-control" type="number" placeholder="0" th:field="*{priceOther}">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <button type="submit" class="btn btn-success">Submit</button>
+                    <form class="theme-form theme-form-2 mega-form" th:action="@{/category/add}" method="post" th:object="${category}">
+                        <div class="mb-4 row align-items-center">
+                            <label class="form-label-title col-sm-3 mb-0">Category Name</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" th:field="*{categoryName}"
+                                       placeholder="Category Name">
                             </div>
                         </div>
-                    </div>
+                        <button type="submit" class="btn btn-success">Thêm</button>
+                    </form>
                 </div>
-            </form>
-            <!-- New Product Add End -->
+            </div>
 
             <!-- footer Start -->
             <div class="container-fluid">
